# fullstack-money-control-app

./: README.md
client/: main.py  pyproject.toml  settings.py
client/cache/: account.py
client/utils/: enums.py  internal.py
client/windows/: auth.py  main.py
client/workers/: auth.py  base.py  main.py
server/: .common.env  .private.env  docker-compose.yml  main.py  pyproject.toml  settings.py
server/accounts/: README.md  pyproject.toml
server/accounts/database/models/: account.py  base.py
server/api/v1/: __init__.py  category.py  product.py
server/common/: settings.py
server/database/: Dockerfile  setup_db.sh
server/database/controllers/: product.py
server/database/models/: product.py
server/nginx/: Dockerfile  nginx.conf
server/passport/: Dockerfile  main.py  pyproject.toml  settings.py
server/passport/api/v1/: __init__.py  account.py  auth.py
server/passport/database/controllers/: account.py  operation.py
server/passport/database/models/: __init__.py  account.py  base.py  operation.py
server/passport/internal/v1/: __init__.py  account.py  auth.py
server/passport/migrations/: env.py
server/passport/migrations/versions/: 31dde883fa54_init_database.py  46edefe63a85_init_db.py  ba9c90ac2634_init_db.py  e5f119ad6905_fix_unique_login.py  eb562ee5dd37_init_db.py
server/passport/schemas/v1/: __init__.py  account.py  errors.py  operation.py
server/passport/utils/: auth.py  enums.py  operations.py
server/products/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  settings.py
server/products/api/v1/: __init__.py  category.py  product.py
server/products/database/controllers/: category.py  product.py
server/products/database/models/: __init__.py  base.py  category.py  product.py
server/products/migrations/: env.py
server/products/migrations/versions/: 36e771fa3611_create_indexes.py  6e160767c6ae_fix_unique.py  832fbe9fed83_init_db.py  8f6d31f22861_init_database.py  b4ad1c73867d_init_db.py  ba31567f1b96_init_database.py
server/products/schemas/v1/: __init__.py  category.py  errors.py  product.py
server/products/utils/: auth.py  balance.py  internal.py
server/schemas/v1/: errors.py  product.py
