[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["bananichdev <dimitri-05@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.0"

[tool.poetry.group.security.dependencies]
python-dotenv = "^1.0.1"
httpx = "^0.27.0"


[tool.isort]
profile = "black"
line_length = 100
extend_skip = ["migrations"]
skip_gitignore = true


[tool.black]
line-length = 100
extend-exclude = "migrations"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
