[tool.poetry]
name = "homework_server"
version = "0.1.0"
description = "Server app for programming homework"
authors = ["bananichdev <dimitri-05@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.110.1"
uvicorn = "^0.29.0"

alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
