[tool.poetry]
name = "products"
version = "0.1.0"
description = "products service"
authors = ["bananichdev <dimitri-05@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.poetry.group.database.dependencies]
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

[tool.poetry.group.security.dependencies]
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.4.0"


[tool.isort]
profile = "black"
line_length = 100
extend_skip = ["migrations"]
skip_gitignore = true


[tool.black]
line-length = 100
extend-exclude = "migrations"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
